Add a timer for when previously mined calcified rocks that no longer have activity (players mining it) will reset their despawn timer